objects/Endpoint__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MoreInfo__c</fullName>
        <label>MoreInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Endpoint</label>
    <listViews>
        <fullName>Alln</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Target__c</columns>
        <columns>Value__c</columns>
        <columns>MoreInfo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>